tests/NormalTests/paczka1/small_fuzzy/98718673.err
Error in line 3: SmKrqXghE1N S840 52,2
Error in line 8: SmKrqXghE1N S363 12,4
